# graphics-algorithm

./: README.md  import-summary.txt
3D-PLY/: README.md  main.cpp  rply.c
3D-skeleton/: README.md
CameraRoam/: CameraUtil.cpp  CameraUtil.h  README.md  main.cpp
MyStreak/: .gitignore  local.properties
blur-scene-gaussian--3d/: README.md
graphics-algorithm/: README.md
melt-animation/: README.md
moving-light-strip/: README.md  frag_body.sh
opengles-uniform-buffer/: README.md  结构体字节对齐.cpp
opengles-uniform-buffer/app/: CMakeLists.txt  build.gradle
opengles-uniform-buffer/app/src/main/: AndroidManifest.xml
opengles-uniform-buffer/app/src/main/assets/shader/: frag.sh  fragTwo.sh  vert.sh  vertTwo.sh
opengles-uniform-buffer/app/src/main/cpp/main/: MyGLThread.cpp  MyGLThread.h  native-lib.cpp
opengles-uniform-buffer/app/src/main/cpp/util/: FileUtil.cpp  FileUtil.h  Matrix.h  MatrixState.cpp  MatrixState.h  ShaderUtil.cpp  ShaderUtil.h  Triangle.cpp  Triangle.h  mylog.h
opengles-uniform-buffer/app/src/main/java/bn/com/myapplication/: GL2JNILib.java  GL2JNIView.java  MainActivity.java
physically-rendering/: .gitignore  README.md  background.fs  brdf.fs  equirectangular_to_cubemap.fs  irradiance_convolution.fs  main.cpp  physically-rendering.sln  prefilter.fs
result/: CameraRoam.jfif  opengles-uniform-buffer.jfif
streak/: README.md
tinyraytracerYD/: README.md  main  out.ppm  stb_image  tinyraytracer  tinyraytracer.cpp  tinyraytracerYD.sln  从零构建光线追踪案例 .md
tinyrendererYD/: README.md  tinyrendererYD.sln
wallpaper/: README.md
(+225 files in other folders)
